--- a/Base-Calculator.vcxproj
+++ b/Base-Calculator.vcxproj
@@ -132,6 +132,9 @@
       <DependentUpon>Calculator.h</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
+  <ItemGroup>
+    <None Include=".gitignore" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
