--- a/Base-Calculator.vcxproj.filters
+++ b/Base-Calculator.vcxproj.filters
@@ -24,4 +24,7 @@
       <Filter>Arquivos de Cabeçalho</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include=".gitignore" />
+  </ItemGroup>
 </Project>
