Basic Operations Started

--- a/Base-Calculator.vcxproj
+++ b/Base-Calculator.vcxproj
@@ -121,6 +121,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Calculator.cpp" />
+    <ClCompile Include="Operator.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Calculator.h">
