Verifications and adjustments

--- a/Base-Calculator.vcxproj.filters
+++ b/Base-Calculator.vcxproj.filters
@@ -24,6 +24,12 @@
     <ClCompile Include="Operator.cpp">
       <Filter>Arquivos de Origem</Filter>
     </ClCompile>
+    <ClCompile Include="Adder.cpp">
+      <Filter>Classes</Filter>
+    </ClCompile>
+    <ClCompile Include="Verifier.cpp">
+      <Filter>Classes</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Calculator.h">
