--- a/Base-Calculator.vcxproj
+++ b/Base-Calculator.vcxproj
@@ -120,8 +120,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Adder.cpp" />
     <ClCompile Include="Calculator.cpp" />
     <ClCompile Include="Operator.cpp" />
+    <ClCompile Include="Verifier.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Calculator.h">
