Building and Debugging

--- a/Base-Calculator.vcxproj
+++ b/Base-Calculator.vcxproj
@@ -125,7 +125,9 @@
     <ClCompile Include="Adder.cpp" />
     <ClCompile Include="Calculator.cpp" />
     <ClCompile Include="Converter.cpp" />
+    <ClCompile Include="NumberFormatter.cpp" />
     <ClCompile Include="Operator.cpp" />
+    <ClCompile Include="Subtractor.cpp" />
     <ClCompile Include="Verifier.cpp" />
   </ItemGroup>
   <ItemGroup>
