--- a/Base-Calculator.vcxproj.filters
+++ b/Base-Calculator.vcxproj.filters
@@ -33,6 +33,12 @@
     <ClCompile Include="Converter.cpp">
       <Filter>Classes</Filter>
     </ClCompile>
+    <ClCompile Include="Subtractor.cpp">
+      <Filter>Classes</Filter>
+    </ClCompile>
+    <ClCompile Include="NumberFormatter.cpp">
+      <Filter>Classes</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Calculator.h">
