--- a/Base-Calculator.vcxproj
+++ b/Base-Calculator.vcxproj
@@ -125,6 +125,7 @@
     <ClCompile Include="Adder.cpp" />
     <ClCompile Include="Calculator.cpp" />
     <ClCompile Include="Converter.cpp" />
+    <ClCompile Include="Multiplier.cpp" />
     <ClCompile Include="NumberFormatter.cpp" />
     <ClCompile Include="Operator.cpp" />
     <ClCompile Include="Subtractor.cpp" />
